; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-data.c_obs_data_item_reattach.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-data.c_obs_data_item_reattach.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.obs_data_item = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.obs_data_item*, %struct.obs_data_item*)* @obs_data_item_reattach to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @obs_data_item_reattach(%struct.obs_data_item* %0, %struct.obs_data_item* %1) #0 {
  %3 = alloca %struct.obs_data_item*, align 8
  %4 = alloca %struct.obs_data_item*, align 8
  %5 = alloca %struct.obs_data_item**, align 8
  store %struct.obs_data_item* %0, %struct.obs_data_item** %3, align 8
  store %struct.obs_data_item* %1, %struct.obs_data_item** %4, align 8
  %6 = load %struct.obs_data_item*, %struct.obs_data_item** %4, align 8
  %7 = getelementptr inbounds %struct.obs_data_item, %struct.obs_data_item* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = load %struct.obs_data_item*, %struct.obs_data_item** %3, align 8
  %10 = call %struct.obs_data_item** @get_item_prev_next(i32 %8, %struct.obs_data_item* %9)
  store %struct.obs_data_item** %10, %struct.obs_data_item*** %5, align 8
  %11 = load %struct.obs_data_item**, %struct.obs_data_item*** %5, align 8
  %12 = icmp ne %struct.obs_data_item** %11, null
  br i1 %12, label %13, label %16

13:                                               ; preds = %2
  %14 = load %struct.obs_data_item*, %struct.obs_data_item** %4, align 8
  %15 = load %struct.obs_data_item**, %struct.obs_data_item*** %5, align 8
  store %struct.obs_data_item* %14, %struct.obs_data_item** %15, align 8
  br label %16

16:                                               ; preds = %13, %2
  ret void
}

declare dso_local %struct.obs_data_item** @get_item_prev_next(i32, %struct.obs_data_item*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
